// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationDrawer renders empty state 1`] = `
<div
  className="m-notification-drawer"
>
  <div
    className="m-notification-drawer__title-bar"
  >
    <span
      className="m-notification-bell-icon m-notification-bell-icon--closed m-notification-bell-icon--read"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    <div
      className="m-notification-drawer__title"
    >
      Notifications
    </div>
    <button
      className="m-close-button"
      data-testid="close-button"
      onClick={[Function]}
      title="Close"
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-notification-drawer__content"
  >
    <p>
      You have no notifications currently.
    </p>
    <p>
      Here you'll be notified about events like accidents and ghost vehicles on any bus routes you have selected on the Route Ladders page.
    </p>
  </div>
</div>
`;

exports[`NotificationDrawer renders notifications 1`] = `
<div
  className="m-notification-drawer"
>
  <div
    className="m-notification-drawer__title-bar"
  >
    <span
      className="m-notification-bell-icon m-notification-bell-icon--closed m-notification-bell-icon--unread"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    <div
      className="m-notification-drawer__title"
    >
      Notifications
    </div>
    <button
      className="m-close-button"
      data-testid="close-button"
      onClick={[Function]}
      title="Close"
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-notification-drawer__content"
  >
    <div
      className="m-notification-drawer__cards"
    >
      <div
        className="m-notification-drawer__header"
      >
        <span
          className="m-notification-drawer__n-unread"
        >
          1
           new
        </span>
        <button
          className="m-notification-drawer__mark-all-read-button"
          onClick={[Function]}
        >
          Mark all as read
        </button>
      </div>
      <button
        className="m-notification-drawer__card m-notification-drawer__card--unread"
        onClick={[Function]}
      >
        <div
          className="m-notification-content"
        >
          <div
            className="m-notification-content__title-row"
          >
            <div
              className="m-notification-content__title"
            >
              NO OPERATOR
            </div>
            <div
              className="m-notification-content__age"
            >
              0 min
            </div>
          </div>
          <div
            className="m-notification-content__description"
          >
            OCC reported that an operator is not available on the r1, r2.
          </div>
          <div
            className="m-properties-list"
          >
            <table
              className="m-properties-list__table"
            >
              <tbody>
                <tr
                  className="m-properties-list__property "
                >
                  <td
                    className="m-properties-list__property-label"
                  >
                    Run
                  </td>
                  <td
                    className="m-properties-list__property-value"
                  >
                    run1, run2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <a
          className="m-notification-drawer__submenu-icon-anchor"
          onClick={[Function]}
        >
          <span
            className="m-notification-drawer__submenu-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </a>
      </button>
    </div>
  </div>
</div>
`;
